@@ -4,7 +4,7 @@ all_df_vars <- function(this_ddf){
 
   if("fake_ddf" %in% class(this_ddf)){
     df_vars <- NULL
-  }else if(this_ddf$method == "io"){
+  }else if(this_ddf$method %in% c("io","trial")){
     df_vars <- c(all.vars(as.formula(this_ddf$ds$ds$aux$ddfobj$scale$formula)),
                  all.vars(as.formula(this_ddf$mr$model)))
     df_vars <- setdiff(df_vars, "distance")
