@@ -36,6 +36,8 @@ NULL
 #'    \code{Sample.Label} \tab identifier for the segment (unique!)\cr
 #'    ??? \tab environmental covariates, for example location (projected latitude and longitude), and other relevant covariates (sea surface temperature, foliage type, altitude, bathymetry etc).}
 #'
+#' If multiple detection functions are to be used, then a column named \code{ddfobj} must be included in \code{observation.data} and \code{segment.data}.
+#'
 #' @name dsm-data
 NULL
 
